Aded images to folder for test run post

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
                             <div class="image-container">
                                 {% if "placeholder" in post.featured_image.url %}
                                 <img class="card-img-top"
-                                    src="https://www.esds.co.in/blog/wp-content/uploads/2022/02/Blockchain-Technology-Blog-Banner.jpg">
+                                    src="media/Blockchain-Technology-Blog-Banner.jpeg">
                                 {% else %}
                                 <img class="card-img-top" src=" {{ post.featured_image.url }}">
                                 {% endif %}
