--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -13,7 +13,7 @@
             <div class="d-none d-md-block col-md-6 masthead-image">
                 <!-- The featured image URL goes in the src attribute -->
                 {% if "placeholder" in post.featured_image.url %}
-                <img src="https://www.esds.co.in/blog/wp-content/uploads/2022/02/Blockchain-Technology-Blog-Banner.jpg" width="100%">
+                <img src="media/Blockchain-Technology-Blog-Banner.jpeg" width="100%">
                 {% else %}
                 <img src="" width="100%">
                 {% endif %}
