--- a/templates/base.html
+++ b/templates/base.html
@@ -26,8 +26,8 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'home' %}"><span class="brand">b<span class="red-o">l</span>og<span
-                        class="thin">|blockchain</span></span></span></a>
+            <a class="navbar-brand" href="{% url 'home' %}"><span class="brand">b<span class="red-o">l</span>ockchain<span
+                        class="thin">|blog</span></span></span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
