Created crypto price widget on coinmarket cap and added to head of base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -57,6 +57,8 @@
         </div>
     </nav>
 
+    <script type="text/javascript" src="https://files.coinmarketcap.com/static/widget/coinMarquee.js"></script><div id="coinmarketcap-widget-marquee" coins="1,1027,825,52,6636,512,2010,5426,74,3890,2634,5994,5805,2,1975,3077,3155,2856,6210,18876,2416,8916,4642,2087,7186,1839,2130,2469,5567,1966,4189,11206,10729" currency="USD" theme="light" transparent="false" show-symbol-logo="true"></div>
+
     <main class="flex-shrink-0 main-bg">
         {% block content %}
         <!-- Content Goes here -->
