--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -94,17 +94,17 @@
                 <!-- For later -->
                 {% if commented %}
                 <div class="alert alert-success" role="alert">
-                    Your comment is awaiting aproval
+                    Your comment is awaiting approval
                 </div>
                 {% else %}
                 {% if user.is_authenticated %}
 
                 <h3>Leave a comment:</h3>
-                <P>Posting as: {{ user.username }}</P>
+                <p>Posting as: {{ user.username }}</p>
                 <form method="post" style="margin-top: 1.3em;">
                     {{ comment_form | crispy }}
                     {% csrf_token %}
-                    <button class="submit" class="btn btn-signup btn-lg">Submit</button>
+                    <button type="submit" class="btn btn-signup btn-lg">Submit</button>
                 </form>
                 {% endif %}
                 {% endif %}
