--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
 
 <head>
     <title>Blockchain Blog</title>
-
+    <link rel="apple-touch-icon" sizes="180x180" href="media/apple-touch-icon.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&display=swap" rel="stylesheet">
