Added favicon to images and cloudinary

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
 
 <head>
     <title>Blockchain Blog</title>
-    <link rel="icon" type="image/png" sizes="16x16" href="media/favicon.ico">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://res.cloudinary.com/dsvzwdxwk/image/upload/v1665048394/favicon_fixx2p.ico">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&display=swap" rel="stylesheet">
