Added keywords to head of base.html file for SEO

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,10 @@
 
 <head>
     <title>Blockchain Blog</title>
+    <meta name="keywords" content="cryptocurrency, coin marketcap, crypto, how to buy cryptocurrency, coin nasdaq,
+    coinbase stocks, binance us, reddit crypto, reddit cryptocurrency, blockchain, bitboy crypto, cryptocurrency prices,
+    what is cryptocurrency, wallet, hardware, ledger, nano, bitcoin, trezor, nano ledger x, smart contracts, ethereum merge, binance smart chain,
+    sec vs ripple, xrp news, cryptocurrency investment, how to invest in cryptocurrency uk, cryptocurrency for beginners, blockchain wallet ">
     <link rel="icon" type="image/png" sizes="16x16" href="https://res.cloudinary.com/dsvzwdxwk/image/upload/v1665048394/favicon_fixx2p.ico">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
