Added delete button to post_deatail.html

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -111,6 +111,11 @@ body {
     color: #fff;
 }
 
+.btn-danger {
+    background-color: red;
+    color: #fff;
+}
+
 .btn-signup:hover,
 .btn-signup:active {
     background-color: #fff;
