Added comment_delete.html delete form

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -141,8 +141,8 @@ body {
     border: none;
 }
 
-button.btn.btn-danger.btn-lg {
+/*button.btn.btn-danger.btn-lg {
     color: #E84610;
     background: #fff;
-}
+}/*
 
