--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -105,7 +105,7 @@
                     {{ comment_form | crispy }}
                     {% csrf_token %}
                     <button type="submit" class="btn btn-signup btn-lg">Submit</button>
-                    <button class="btn btn-danger btn-lg right" type="submit">Delete</button>
+                    <button type="submit" class="btn btn-danger btn-lg">Delete</button>
                 </form>
                 {% endif %}
                 {% endif %}
