--- a/templates/comment_delete.html
+++ b/templates/comment_delete.html
@@ -1,22 +1,16 @@
-{% extends "base.html" %}
-
+{% extends "blog/base.html" %}
 {% block content %}
-    <div class="container post-form mt-3 pb-3">
-        <div class="row">
-            <div class="col-md-8 mt-3 offset-md-2">
-                <form method="POST">
-                    {% csrf_token %}
-                    <fieldset class="form-group">
-                        <legend class="border-bottom mb-4">Delete Comment</legend>
-                        <h2>Are you sure you want to delete the comment "{{ object.title }}"</h2>
-                    </fieldset>
-                    <div class="form-group">
-                        <button class="btn btn-danger btn-lg right" type="submit">Delete</button>
-                        <a class="btn btn-signup right" href="{% url 'post_detail' post.slug %}">Cancel</a>
-                    </div>
-                </form>
+    <div class="content-section">
+        <form method="POST">
+            {% csrf_token %}
+            <fieldset class="form-group">
+                <legend class="border-bottom mb-4">Delete Comment</legend>
+                    <h2>Are you sure you want to delete the comment "{{ object.title }}"</h2>
+            </fieldset>
+            <div class="form-group">
+                <button class="btn btn-outline-danger" type="button">Yes, Delete</button>
+                <a class="btn btn-outline-secondary" href="{% url 'post-detail' object.id %}">Cancel</a>
             </div>
-        </div>
+        </form>
     </div>
-
-{% endblock %}
+{% endblock content %}
