--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -85,6 +85,7 @@
                     <!-- The body of the comment goes before the | -->
                     {{ comment.body | linebreaks }}
                 </div>
+                <button type="button" class="btn btn-danger btn-lg" href="{% url 'comment_delete' comment.id %}">Delete</button>
                 <!-- Our for loop ends here -->
                 {% endfor %}
             </div>
@@ -105,7 +106,6 @@
                     {{ comment_form | crispy }}
                     {% csrf_token %}
                     <button type="submit" class="btn btn-signup btn-lg">Submit</button>
-                    <button type="submit" class="btn btn-danger btn-lg">Delete</button>
                 </form>
                 {% endif %}
                 {% endif %}
