--- a/templates/comment_delete.html
+++ b/templates/comment_delete.html
@@ -8,8 +8,8 @@
                     <h2>Are you sure you want to delete the comment "{{ object.title }}"</h2>
             </fieldset>
             <div class="form-group">
-                <button class="btn btn-outline-danger" type="button">Yes, Delete</button>
-                <a class="btn btn-outline-secondary" href="{% url 'delete_comment' object.id %}">Cancel</a>
+                <button class="btn btn-outline-danger" type="submit">Yes, Delete</button>
+                <a class="btn btn-outline-secondary" href="{% url 'home' %}">Cancel</a>
             </div>
         </form>
     </div>
