--- a/templates/base.html
+++ b/templates/base.html
@@ -82,57 +82,66 @@
         {% endblock content %}
     </main>
 
-    <!-- Mailchimp signup form -->
-    <div id="mc_embed_signup">
-        <link href="//cdn-images.mailchimp.com/embedcode/classic-071822.css" rel="stylesheet" type="text/css">
-        <div id="mc_embed_signup">
-           <form
-              action="https://herokuapp.us21.list-manage.com/subscribe/post?u=6ff7aa99dd492ccb056086d1b&amp;id=51c8ab83d5&amp;f_id=00a8c2e1f0"
-              method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
-              class="validate" target="_blank" novalidate>
-              <div id="mc_embed_signup_scroll">
-                 <h2>Subscribe</h2>
-                 <p>Keep up to date with the latest news!
-                 </p>
-                 <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-                 <div class="mc-field-group">
-                    <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
-                    </label>
-                    <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" required>
-                    <span id="mce-EMAIL-HELPERTEXT" class="helper_text"></span>
+    <!-- Footer -->
+    <footer class="footer mt-auto mt-lg-5 py-3 bg-white">
+        <div class="row justify-content-center">
+           <div class="col-12">
+              <hr>
+              <p class="font-large logo-font text-center">Keep in touch</p>
+           </div>
+
+           <div class="col-12 col-md-6 col-lg-5">
+              <!-- Mailchimp signup form -->
+              <div id="mc_embed_signup">
+                 <link href="//cdn-images.mailchimp.com/embedcode/classic-071822.css" rel="stylesheet" type="text/css">
+                 <div id="mc_embed_signup">
+                    <form
+                       action="https://herokuapp.us21.list-manage.com/subscribe/post?u=6ff7aa99dd492ccb056086d1b&amp;id=51c8ab83d5&amp;f_id=00a8c2e1f0"
+                       method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
+                       class="validate" target="_blank" novalidate>
+                       <div id="mc_embed_signup_scroll">
+                          <h2>Subscribe</h2>
+                          <p>Get exclusive offers and discount codes by subscribing!
+                          </p>
+                          <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+                          <div class="mc-field-group">
+                             <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+                             </label>
+                             <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" required>
+                             <span id="mce-EMAIL-HELPERTEXT" class="helper_text"></span>
+                          </div>
+                          <div id="mce-responses" class="clear foot">
+                             <div class="response" id="mce-error-response" style="display:none"></div>
+                             <div class="response" id="mce-success-response" style="display:none"></div>
+                          </div>
+                          <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                          <div style="position: absolute; left: -5000px;" aria-hidden="true"><input
+                             type="text" name="b_6ff7aa99dd492ccb056086d1b_51c8ab83d5" tabindex="-1"
+                             value=""></div>
+                          <div class="optionalParent">
+                             <div class="clear foot">
+                                <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+                                <p class="brandingLogo"><a href="http://eepurl.com/ia8pEf" title="Mailchimp - email marketing made easy and fun"><img src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_dark_dtp.svg"></a></p>
+                             </div>
+                          </div>
+                       </div>
+                    </form>
                  </div>
-                 <div id="mce-responses" class="clear foot">
-                    <div class="response" id="mce-error-response" style="display:none"></div>
-                    <div class="response" id="mce-success-response" style="display:none"></div>
-                 </div>
-                 <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                 <div style="position: absolute; left: -5000px;" aria-hidden="true"><input
-                    type="text" name="b_6ff7aa99dd492ccb056086d1b_51c8ab83d5" tabindex="-1"
-                    value=""></div>
-                 <div class="optionalParent">
-                    <div class="clear foot">
-                       <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
-                       <p class="brandingLogo"><a href="http://eepurl.com/ia8pEf" title="Mailchimp - email marketing made easy and fun"><img src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_dark_dtp.svg"></a></p>
-                    </div>
-                 </div>
+                 <!--End mc_embed_signup-->
               </div>
-           </form>
+           </div>
+           <div class="col-md-6 col-12 col-lg-5">
+              <br>
+              <h6 class="text-center m-0 dark-font">
+                 <strong>Follow us on social media!</strong>
+              </h6>
+              <br>
+              <p class="text-center m-0 footer-icon footer-link">
+                 <a class="mx-2" href="https://facebook.com" target="_blank" rel="noopener noreferrer" aria-label="Visit us on Facebook (opens in new tab)"><i class="fab fa-facebook-f"></i></a>
+              </p>
+           </div>
         </div>
-        <!--End mc_embed_signup-->
-     </div>
-  </div>
-  <div class="col-md-6 col-12 col-lg-5">
-     <br>
-     <h6 class="text-center m-0 dark-font">
-        <strong>Follow us on social media!</strong>
-     </h6>
-     <br>
-     <p class="text-center m-0 footer-icon footer-link">
-        <a class="mx-2" href="https://facebook.com" target="_blank" rel="noopener noreferrer" aria-label="Visit us on Facebook (opens in new tab)"><i class="fab fa-facebook-f"></i></a>
-     </p>
-  </div>
-</div>
-</footer>
+     </footer>
     <script>
         setTimeout(function () {
             let messages = document.getElementById('msg');
