Added 404 request and exception to views.py and urls.py

--- a/templates/404.html
+++ b/templates/404.html
@@ -14,7 +14,7 @@
     <div class="row h-100">
         <div class="col-12 my-auto text-center">
             <h2 class="logo-font text-black">Error 404</h2>
-            <p class="mt-5">Don't worry this reqiuest could not be found. please click on the link below and we will get you back to the home page. </p>
+            <p class="mt-5">Sorry this page could not be found. please click on the link below and we will get you back to the home page. </p>
             <div class="my-5">
                 <h4>
                     <a href="{% url 'home' %}" class="shop-button btn btn-lg rounded-0 text-uppercase py-3">
