Added user story images and information to readme.md file

--- a/templates/base.html
+++ b/templates/base.html
@@ -101,7 +101,7 @@
                        class="validate" target="_blank" novalidate>
                        <div id="mc_embed_signup_scroll">
                           <h2>Subscribe</h2>
-                          <p>Get exclusive offers and discount codes by subscribing!
+                          <p>Keep upto date with the latest posts by subscribing!
                           </p>
                           <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
                           <div class="mc-field-group">
