Added social media links to base.html file for home page

--- a/templates/base.html
+++ b/templates/base.html
@@ -138,6 +138,9 @@
               <br>
               <p class="text-center m-0 footer-icon footer-link">
                  <a class="mx-2" href="https://facebook.com" target="_blank" rel="noopener noreferrer" aria-label="Visit us on Facebook (opens in new tab)"><i class="fab fa-facebook-f"></i></a>
+                 <a href="https://instagram.com" target="_blank" rel="noopener noreferrer" aria-label="Visit us on Instagram (opens in new tab)"><i class="fab fa-instagram"></i></a>
+                 <a href="https://twitter.com" target="_blank" rel="noopener noreferrer" aria-label="Visit us on Instagram (opens in new tab)"><i class="fab fa-twitter"></i></a>
+                 <a href="https://youtube.com" target="_blank" rel="noopener noreferrer" aria-label="Visit us on Instagram (opens in new tab)"><i class="fab fa-youtube"></i></a>
               </p>
            </div>
         </div>
