--- a/templates/edit.html
+++ b/templates/edit.html
@@ -4,12 +4,12 @@
         <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Delete Comment</legend>
-                    <h2>Are you sure you want to delete the comment "{{ object.title }}"</h2>
+                <legend class="border-bottom mb-4">Edit Comment</legend>
+                    <h2>Edit comment "{{ object.title }}"</h2>
             </fieldset>
             <div class="form-group">
                 <button class="btn btn-outline-danger" type="submit">Yes, Delete</button>
-                <button class="btn btn-outline-success" type="submit">Edit</button>
+                <button class="btn btn-outline-danger" type="submit">Edit</button>
                 <a class="btn btn-outline-secondary" href="{% url 'home' %}">Cancel</a>
             </div>
         </form>
