--- a/templates/post_update.html
+++ b/templates/post_update.html
@@ -1,16 +1,16 @@
 {% extends "base.html" %}
 {% block content %}
     <div class="content-section">
-        <form method="POST">
+        <form method="POST" action="{% url 'post_update' %}" type="submit" value="Edit">
             {% csrf_token %}
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Edit Comment</legend>
                     <h2>Edit comment successfully done "{{ object.title }}"</h2>
             </fieldset>
             <div class="form-group">
-                <button class="btn btn-outline-danger" type="submit">Yes, Delete</button>
-                <button class="btn btn-outline-success" href="{% url 'post_update' %}" type="submit">Edit</button>
-                <a class="btn btn-outline-secondary" href="{% url 'home' %}">Cancel</a>
+                <!--<button class="btn btn-outline-danger" type="submit">Yes, Delete</button> -->
+                <button class="btn btn-outline-success"  action="{% url 'post_update' %}" type="submit">Edit</button>
+                <a class="btn btn-outline-secondary" href="{% url 'home' %}">Cancel</a> 
             </div>
         </form>
     </div>
