--- a/templates/post_update.html
+++ b/templates/post_update.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
     <div class="content-section">
-        <form method="POST" action="{% url 'post_update' %}" type="submit" value="Edit">
+        <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Edit Comment</legend>
@@ -9,7 +9,8 @@
             </fieldset>
             <div class="form-group">
                 <!--<button class="btn btn-outline-danger" type="submit">Yes, Delete</button> -->
-                <button class="btn btn-outline-success"  action="{% url 'post_update' %}" type="submit">Edit</button>
+                <!-- <button class="btn btn-outline-success"  action="{% url 'post_update' %}" type="submit">Edit</button> -->
+                <a class="btn btn-outline-secondary" type="submit" value="edit" href="{% url 'post_update' %}">Edit</a>
                 <a class="btn btn-outline-secondary" href="{% url 'home' %}">Cancel</a> 
             </div>
         </form>
