Added commentupdateview to views.py file for users to edit their own comments once they are registered and signed in, still working on editing post section

--- a/templates/post_update.html
+++ b/templates/post_update.html
@@ -10,7 +10,7 @@
             <div class="form-group">
                 <!--<button class="btn btn-outline-danger" type="submit">Yes, Delete</button> -->
                 <!-- <button class="btn btn-outline-success"  action="{% url 'post_update' %}" type="submit">Edit</button> -->
-                <a class="btn btn-outline-secondary" type="submit">Edit</a>
+                <a class="btn btn-outline-secondary" type="submit" value="update">Edit</a>
                 <a class="btn btn-outline-secondary" href="{% url 'home' %}">Home</a> 
             </div>
         </form>
