--- a/templates/comment_update.html
+++ b/templates/comment_update.html
@@ -1,15 +1,15 @@
-{% extends "base.html" %}
-{% block content %}
+{% extends "base.html" %} {% block content %}
+
+{% load crispy_forms_tags %}
     <div class="content-section">
         <form method="post">
             {% csrf_token %}
+            {{ comment_form | crispy }}
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Edit Comment</legend>
-                    <h2>Edit comment successfully done "{{ object.title }}"</h2>
+                    <h2>Edit comment {{ object.title }}</h2>
             </fieldset>
             <div class="form-group">
-                <!--<button class="btn btn-outline-danger" type="submit">Yes, Delete</button> -->
-                <!-- <button class="btn btn-outline-success"  action="{% url 'post_update' %}" type="submit">Edit</button> -->
                 <a class="btn btn-outline-secondary" href="{% url 'comment_update' comment.id %}" type="submit" value="Update">Edit</a>
                 <a class="btn btn-outline-secondary" href="{% url 'home' %}">Home</a> 
             </div>
