--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -83,11 +83,14 @@
                         </span> wrote:
                     </p>
                     <!-- The body of the comment goes before the | -->
-                    {{ comment.body | linebreaks }}
+                    
                 </div>
                 {% if request.user == post.author %}
+                {{ comment.body | linebreaks }}
                 <a class="btn btn-danger btn-lg" href="{% url 'comment_delete' comment.id %}">Delete</a>
                 <a class="btn btn-success btn-lg" href="{% url 'comment_update' comment.id %}">Edit</a>
+                {% else %}
+                {{ comment.body | linebreaks }}
                 {% endif %}
                 <!-- Our for loop ends here -->
                 {% endfor %}
