Added different button colours to each of the html files

--- a/templates/comment_update.html
+++ b/templates/comment_update.html
@@ -11,8 +11,8 @@
                     <h2>Edit comment {{ object.title }}</h2>
             </fieldset>
             <div class="form-group">
-                <button type="submit">Edit</button>
-                <a class="btn btn-outline-secondary" href="{% url 'home' %}">Home</a> 
+                <button class="btn btn-outline-success" type="submit">Edit</button>
+                <a class="btn btn-outline-primary" href="{% url 'home' %}">Home</a> 
             </div>
         </form>
     </div>
