Added please edit your comment here, and comment will not be reversible, in the comment_update.html file for users to understand what will happen when editing there comments

--- a/templates/comment_update.html
+++ b/templates/comment_update.html
@@ -7,8 +7,8 @@
             {% csrf_token %}
             {{ form | crispy }}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Edit Comment</legend>
-                    <h2>Edit comment {{ object.title }}</h2>
+                <legend class="border-bottom mb-4">Please Edit your comment here:</legend>
+                    <h2>Please know that any edit you make will not be reversible. {{ object.title }}</h2>
             </fieldset>
             <div class="form-group">
                 <button class="btn btn-outline-success" type="submit">Edit</button>
