Added external link for users about blockchain technology, link is in the top right of the web page

--- a/templates/base.html
+++ b/templates/base.html
@@ -54,7 +54,7 @@
                     {% endif %}
                 </ul>
                 <span class="navbar-text text-muted">
-                    blockchain technology
+                    <a href="https://www.investopedia.com/terms/b/blockchain.asp" target="_blank">blockchain technology</a>
                 </span>
             </div>
         </div>
